Change Log
----------

  V0.99.5
  
  - Fixes:
    - Removed freetype classes, library and example (Lakedaemon's distro will
      provide this functionality).
    - Examples build script uses for loop instead of explicitly named folders.
    - Gadget::checkCollision(Gadget) works correctly.
    - Tests build script uses for loop instead of explicitly named folders.

  - New Features:
    - Added makefile for demo - can now be built from command line.

  V0.99.4 (20100902)
  
  - Fixes:
    - All makefiles no longer create .ds.gba and .sc.nds binaries.
    - Fonts include doxygen comments.
    - Amended return type of some font properties (Lakedaemon).
    - Reorganised PSD and BMP files.
    - Prevented demo build process from unnecessarily including BMP files.
    - Fixed divide by 0 when content size is 0 in SliderVertical and
      SliderHorizontal::resizeGrip().
    - SDL fixes.
    - GraphicsPort maps between co-ordinate systems more accurately; fixes
      clipping problems.
  
  - New Features:
    - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
    - Setting MultiLineTextBox's max rows to -1 forces it to retain all text.
    - Added getCharTop() to font classes.
    - Various minor .NET tool improvements.
    - Added Gadget::checkCollision(Rect&).
    - Added drawBaselineText() to Graphics and GraphicsPort classes
     (Lakedaemon).
    - Added freetype outline font class (Lakedaemon).
    - Added Install.bat install script for Windows users.
    - Python bmp2font script updated to match output of .NET tools.

  V0.99.3 (20100819)
  
  - Fixes:
    - WoopsiString::compareTo() no longer inlined (fixes SF bug 3017420).
    - Moved unused FixedWidthFontBase class into extras directory.
    - Moved putSDLPixel() and getSDLPixel() into FrameBuffer class from
      woopsifuncs files.
    - Added copy() to all bitmap classes.
    - Replaced call to woopsiDmaCopy() in Graphics::copy() with call to copy()
      method of bitmap class.